# Light-Weight-Agentic-Data-Analyst-for-Sentiment-Analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_cli.bat  run_cli.sh  run_ui.bat  run_ui.sh  setup.bat  setup.sh
.claude/: settings.local.json
.streamlit/: config.toml
docs/: architecture.md
src/ada/: __init__.py  cli.py  config.py  graph.py  i18n.py  state.py
src/ada/llm/: client.py
src/ada/llm/prompts/: brief_writer.md  planner.md  question_generator.md  schema_inference.md
src/ada/memory/: store.py
src/ada/memory/seeds/: language_norms.yaml  sentiment_lexicons.yaml
src/ada/nodes/: __init__.py  amplification.py  brief.py  clean.py  eda.py  human.py  ingest.py  narrative.py  planner.py  preprocess.py  reshape.py  schema_infer.py  sentiment.py  topic.py
src/ada/tools/: amplification.py  embed.py  hashing.py  lang_detect.py  loader.py  narrative.py  profile.py  sentiment.py  stats.py  text_norm.py  tokenize.py  topic.py  viz.py
src/ada/ui/: app.py  state.py
src/ada/ui/pages/: hitl.py  report.py  start.py
src/ada/ui/views/: progress.py
tests/: conftest.py  test_slice1_smoke.py  test_slice2_smoke.py  test_slice3_smoke.py  test_slice4_smoke.py  test_slice5_smoke.py
